# school-code

cmpt300/kaigara/: Makefile  README.rst  dbg.h  defines.h  kaigara.c
cmpt300/mell/: Makefile  README.rst  dbg.h  defines.h  mell.c
cmpt300/prodcon/: Makefile  README.rst  foundry.c  metals.c  metals.h  operator.c  operator.h  report.tex  utils.c  utils.h
cmpt300/threads/: threads.tex
cmpt354/a3/: a3.java
cmpt354/a3/types/: Customer.java  Customers.java
cmpt361/a1/: Makefile  block.c  block.h  collision.c  collision.h  fetris.c  vertex.glsl
cmpt361/a2/: CMakeLists.txt  Makefile  aFragment.glsl  aVertex.glsl  block.c  block.h  collision.c  collision.h  defines.h  fetris.c
cmpt361/a3/: CMakeLists.txt  README.md  board.c  board.h  env.c  env.h  fragment.glsl  lighting.c  lighting.h  material.c  material.h  raycast.c  scene.h  sphere.c  sphere.h  vertex.glsl
cmpt365/a2/: JPEG.hs  a2.tex  peggy.cabal  peggy.hs  stack.yaml
cmpt365/a2/demo/: demo.hs  peggy-demo.cabal
cmpt365/a2/peggy/: JPEG.hs  peggy.cabal
cmpt404/: Decrypt.hs  cipher.txt  decrypt.hs
cmpt412/a1/: NOTES.md  detect.m  pencil.m  pencils.tex
cmpt412/a2/: NOTES.md  a2.tex  allzero.m  demo.m  lut.m  normals.m  quiv.m
cmpt412/a3/: a3.tex  backproj.m  com.m  demo.m  histogram.m  histtrack.m  meanshift.m  ratio.m  shiftdemo.m  trackdemo.m
cmpt412/a4/: a4.tex  face.m
cmpt419/a1/: a1.tex
cmpt419/a1/code/: crossValidation.m  designMatrix.m  polynomial_regression.m  polynomial_regression_1d.m  polynomial_regression_reg.m  sigmoid_regression.m  (+1 more)
cmpt419/a2/: a2.tex
cmpt419/a3/: a3.tex
(+8 files in other folders)
